# jaxNR

./: README.md  mkdocs.yaml  pyproject.toml
src/jaxNR/: BSSN.py  data_structure.py  initial_condition.py
tests/: uniform_grid_sketchpad.py
