[project]
name = "jaxNR"
version = "0.1.0"
description = "Numerical relativity simulation in Jax"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython>=8.29.0",
    "jax[cuda12]>=0.4.35",
    "jaxtyping>=0.2.36",
    "pre-commit>=4.0.1",
    "pyright>=1.1.389",
    "pytest>=8.3.3",
    "ruff>=0.8.0",
]

[project.optional-dependencies]
docs = [
    "mkdocs-gen-files==0.5.0",
    "mkdocs-jupyter==0.25.1",
    "mkdocs-literate-nav==0.6.1",
    "mkdocs-material==9.5.47",
    "mkdocs==1.6.1",
    "mkdocstrings[python]==0.27.0",
    "pymdown-extensions==10.12",
]

[dependency-groups]
dev = [
    "jaxNR",
]

[tool.uv.sources]
jaxNR = { workspace = true }


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pyright]
include = [
    "src",
    "tests",
]
exclude = [
    "docs"
]
